--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
             <div class="apresentacao__links">
                 <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                 <a class="apresentacao__links__navegacao" href="https://github.com/felipegabrielsilva"><img
-                        src="img/Logo Github.png">GitHub</a>
+                        src="./assets/Logo Github.png">GitHub</a>
                 <a class="apresentacao__links__navegacao"
                     href="https://www.linkedin.com/in/felipe-gabriel-42a073187/"><img
-                        src="./assets/Logo linkedin.png linkedin.png">Linkedin</a>
+                        src="./assets/Logo linkedin.png">Linkedin</a>
                 <a class="apresentacao__links__navegacao" href="https://www.twitch.tv/maisumfelipe"><img
                         src="./assets/Logo Twitch.png Twitch.png">Twitch</a>
             </div>
